<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <ImageView
        android:src="@drawable/app_bg"
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:layout_height="match_parent"/>

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:onClick="onClick"
        android:src="@drawable/ic_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_65sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/ic_icon" />

        <TextView
            android:id="@+id/tvTitle"
            fontPath="@string/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15ssp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/tvTitleOrderDetail"
            fontPath="@string/font_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"

            android:text="@string/enter_your_registered_email"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/bg_white"
            android:hint="@string/hint_email"
            fontPath="@string/font_medium"
            android:paddingLeft="@dimen/_10sdp"
            android:textAlignment="viewStart"
            android:paddingRight="@dimen/_10sdp"
            android:textSize="@dimen/_10ssp"
            tools:ignore="MissingPrefix" />


        <TextView
            android:id="@+id/tvSubmit"
            fontPath="@string/font_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/bg_editfield"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:onClick="onClick"
            android:padding="@dimen/_10sdp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            tools:ignore="MissingPrefix" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            fontPath="@string/font_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/tvSignup"
            fontPath="@string/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:onClick="onClick"
            android:text="@string/sign_up_btn"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_11ssp"
            tools:ignore="MissingPrefix" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</RelativeLayout>