<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AccountSettingActivity"
    android:id="@+id/main_layout">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_minus1sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_back" />

            <TextView
                fontPath="@string/font_thin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Change Account Setting"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                tools:ignore="MissingPrefix" />
        </RelativeLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginTop="@dimen/_10sdp"
            app:hintEnabled="false">
        <EditText
            android:id="@+id/old_email"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            fontPath="@string/font_medium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/bg_onlycorner_gary"
            android:gravity="start|center_vertical"
            android:imeOptions="actionNext"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="1dp"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            tools:ignore="MissingPrefix"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginTop="@dimen/_10sdp"
            app:hintEnabled="false">
            <EditText
                android:id="@+id/new_email"
                android:hint="@string/hint_new_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                fontPath="@string/font_medium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/bg_onlycorner_gary"
                android:gravity="start|center_vertical"
                android:imeOptions="actionNext"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="1dp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                tools:ignore="MissingPrefix"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/changeEmail"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_corner"
            android:text="@string/btn_change"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


        <Button
            android:id="@+id/send"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_corner"
            android:text="@string/btn_send"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/remove"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_corner"
            android:text="@string/btn_remove"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/change_email_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_corner"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/white"
            android:text="@string/change_email"
            android:textStyle="bold" />


        <Button
            android:id="@+id/sending_pass_reset_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_corner"
            android:layout_marginTop="16dp"
            android:text="@string/send_password_reset_email"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/remove_user_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_corner"
            android:text="@string/remove_user"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign_out"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_corner"
            android:text="@string/btn_sign_out"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
