<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <ImageView
        android:src="@drawable/app_bg"
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-3dp">


        <RelativeLayout
            android:id="@+id/rlLoginDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLogin"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_25sdp"
                android:src="@drawable/ic_icon" />

            <TextView
                android:id="@+id/tvTitle"
                fontPath="@string/font_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/title_activity_login"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15ssp"
                tools:ignore="MissingPrefix" />

            <FrameLayout
                android:id="@+id/loginViewLayout"
                android:layout_width="match_parent"
                android:layout_below="@+id/tvTitle"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:id="@+id/emailLayout"
                    android:layout_width="match_parent"
                    android:visibility="visible"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/edEmail"
                        fontPath="@string/font_medium"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@drawable/bg_white"
                        android:gravity="start|center_vertical"
                        android:hint="@string/hint_email"
                        android:imeOptions="actionNext"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/_10ssp"
                        tools:ignore="MissingPrefix" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tvPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/edEmail"
                        android:layout_gravity="center|end"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/black">

                        <EditText
                            android:id="@+id/edPassword"
                            fontPath="@string/font_medium"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_35sdp"
                            android:layout_below="@id/edEmail"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:background="@drawable/bg_white"
                            android:hint="@string/hint_password"
                            android:textAlignment="viewStart"
                            android:gravity="start|center_vertical"
                            android:imeOptions="actionGo"
                            android:inputType="textPassword"
                            android:paddingLeft="@dimen/_10sdp"
                            android:paddingRight="@dimen/_10sdp"
                            android:textSize="@dimen/_10ssp"
                            tools:ignore="MissingPrefix" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tvForgetPassword"
                        fontPath="@string/font_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvPass"
                        android:layout_alignParentEnd="true"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:gravity="end|center_vertical"
                        android:onClick="onClick"
                        android:text="@string/btn_forgot_password"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        tools:ignore="MissingPrefix" />


                </RelativeLayout>

            </FrameLayout>


            <TextView
                android:id="@+id/tvLogin"
                fontPath="@string/font_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginViewLayout"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_editfield"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:onClick="onClick"
                android:padding="@dimen/_10sdp"
                android:text="@string/btn_login"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                tools:ignore="MissingPrefix" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    fontPath="@string/font_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"

                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/tvSignup"
                    fontPath="@string/font_bold"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:onClick="onClick"
                    android:gravity="center_horizontal"
                    android:text="@string/sign_up_btn"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_11ssp"
                    tools:ignore="MissingPrefix" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="invisible" />

</RelativeLayout>